--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -59,7 +59,7 @@
        <% else %>
     <a href="https://geofly.me/posts/eraseface/?post_id=<%= @post.id %>"data-role="button" data-inline="true" data-mini ="true"data-theme="b">EraseFace</a>
 <% end %>
-<%#link_to "Paste Your Face!",'http://localhost:3000/posts/facepaste?user_id=21&post_id=129',:rel => "external" %>
+<%#link_to "Paste Your Face!",'https://geofly.me/posts/facepaste?user_id=21&post_id=129',:rel => "external" %>
 <% end %>
 <%=link_to "Show  Faces!", profiles_path( :post_id => @post), :action => :index, :rel => "external" %>
 </div>
